--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -2,29 +2,49 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<title th:text="${titulo}"></title>
 </head>
 <body>
-	<h1 th:text="${titulo}"></h1>
-	<table>
-		<thead>
-			<tr>
-				<th>Id</th>
-				<th>Nombre</th>
-				<th>Apellido</th>
-				<th>Correo Electrónico</th>
-				<th>Fecha</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="cliente: ${clientes}">
-				<td th:text="${cliente.id}"></td>
-				<td th:text="${cliente.nombre}"></td>
-				<td th:text="${cliente.apellido}"></td>
-				<td th:text="${cliente.email}"></td>
-				<td th:text="${cliente.createdAt}"></td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="container">
+		<h1 th:text="${titulo}" class="text-primary text-center"></h1>
+		<ul class="nav justify-content-end">
+		  <li class="nav-item">
+		    <a class="nav-link active" aria-current="page" href="#">Active</a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" href="#">Link</a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" href="#">Link</a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link disabled">Disabled</a>
+		  </li>
+		</ul>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Nombre</th>
+					<th>Apellido</th>
+					<th>Correo Electrónico</th>
+					<th>Fecha</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="cliente: ${clientes}">
+					<td th:text="${cliente.id}"></td>
+					<td th:text="${cliente.nombre}"></td>
+					<td th:text="${cliente.apellido}"></td>
+					<td th:text="${cliente.email}"></td>
+					<td th:text="${cliente.createdAt}"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
