Post crear nuevo cliente listo

--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -24,6 +24,7 @@
 		  </li>
 		</ul>
 		<table class="table table-striped">
+			<a th:href="@{/form}">Crear Cliente</a>
 			<thead>
 				<tr>
 					<th>Id</th>
