--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -32,6 +32,7 @@
 					<th>Apellido</th>
 					<th>Correo Electrónico</th>
 					<th>Fecha</th>
+					<th>Editar</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -41,6 +42,7 @@
 					<td th:text="${cliente.apellido}"></td>
 					<td th:text="${cliente.email}"></td>
 					<td th:text="${cliente.createdAt}"></td>
+					<td><a th:href="@{/form/} + ${cliente.id}" th:text="'Editar'" class="btn btn-primary btn-xs"></a></td>
 				</tr>
 			</tbody>
 		</table>
